--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li>email : joielechong at yahoo dot fr</li>
+        		<li>email joielechong at yahoo dot fr</li>
         		<li><a href="https://github.com/joielechong">github.com/joielechong</a></li>
 			</ul>
 		</footer>
